--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -7,8 +7,7 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  width: 360px;
-  border: 1px solid black;
+  width: 320px;
 }
 
 .label {
@@ -38,4 +37,11 @@
   color: white;
   cursor: pointer;
   outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  .form {
+    width: 420px;
+    border: 1px solid black;
+  }
 }
