--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -2,7 +2,7 @@
   list-style: none;
   margin: 0 auto;
   padding: 0;
-  width: 360px;
+  width: 320px;
 }
 
 .ContactsListItem {
@@ -40,4 +40,22 @@
   color: white;
   cursor: pointer;
   outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  .contactsList {
+    width: 420px;
+  }
+
+  .contact {
+    width: 360px;
+  }
+
+  .name {
+    width: 180px;
+  }
+
+  .number {
+    width: 180px;
+  }
 }
